Add Q-network implementation

--- a/rl_part1.ipynb
+++ b/rl_part1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -164,21 +164,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 20.5670044   19.51785147  17.38608862  19.14738249]\n",
-      " [  0.91054803   8.77170243  -8.54227128  24.49355209]\n",
-      " [ -2.97451656  -8.21166295  -6.3672637   10.55430708]\n",
-      " [-10.86570585  21.38769621 -10.63188658 -10.49797182]\n",
-      " [ 39.66402898   2.73335097   2.32026356   0.77168622]\n",
+      "[[  9.79458602   4.23867511  10.19140003   5.16406954]\n",
+      " [ -5.5974447   -8.86780938  -9.74674068  -6.49789267]\n",
+      " [ -8.83413887  -7.0899909   -8.80651155  -7.35387124]\n",
+      " [ -7.65416181  -7.5385439  -10.30876204 -10.97979487]\n",
+      " [  9.76670888  -9.60220376  -6.70756983  -5.68055684]\n",
       " [ -5.          -5.          -5.          -5.        ]\n",
-      " [ -5.53994758  -8.86302027   1.8038082   -9.85453869]\n",
+      " [ -8.95632286  -9.13790343  -9.92329327  -9.74982789]\n",
       " [ -5.          -5.          -5.          -5.        ]\n",
-      " [ -9.32055938   1.34942203  98.39646432  44.71442583]\n",
-      " [ -7.54064598  57.76975062  16.3716856   -4.68696   ]\n",
-      " [ 26.16449606   4.28321056   0.50947998  12.81580485]\n",
+      " [ 13.71821499  -6.37679686  -1.17976064  21.18053432]\n",
+      " [ -5.17266067 127.8232648   -8.85055552   4.29425646]\n",
+      " [ 30.03089622  -6.13372615  -9.70804677  -8.82228622]\n",
       " [ -5.          -5.          -5.          -5.        ]\n",
       " [ -5.          -5.          -5.          -5.        ]\n",
-      " [ 15.64539901  15.775975   116.41888212   8.47312434]\n",
-      " [ 72.88172146 185.0948701  113.58839144 104.58012376]\n",
+      " [  2.21208633  24.21894155 125.05735876  12.94292584]\n",
+      " [ 31.34126215 121.9976938   89.5078087   54.6152641 ]\n",
       " [100.         100.         100.         100.        ]]\n"
      ]
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -199,47 +199,41 @@
      "output_type": "stream",
      "text": [
       "####################\n",
+      "  (Right)\n",
+      "S\u001b[41mF\u001b[0mFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "####################\n",
       "  (Left)\n",
-      "SFFF\n",
-      "\u001b[41mF\u001b[0mHFH\n",
+      "\u001b[41mS\u001b[0mFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "####################\n",
+      "  (Right)\n",
+      "\u001b[41mS\u001b[0mFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "####################\n",
+      "  (Right)\n",
+      "S\u001b[41mF\u001b[0mFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "####################\n",
+      "  (Left)\n",
+      "S\u001b[41mF\u001b[0mFF\n",
+      "FHFH\n",
       "FFFH\n",
       "HFFG\n",
       "####################\n",
       "  (Left)\n",
       "SFFF\n",
-      "FHFH\n",
-      "\u001b[41mF\u001b[0mFFH\n",
-      "HFFG\n",
-      "####################\n",
-      "  (Right)\n",
-      "SFFF\n",
-      "FHFH\n",
-      "F\u001b[41mF\u001b[0mFH\n",
-      "HFFG\n",
-      "####################\n",
-      "  (Down)\n",
-      "SFFF\n",
-      "FHFH\n",
-      "FF\u001b[41mF\u001b[0mH\n",
-      "HFFG\n",
-      "####################\n",
-      "  (Left)\n",
-      "SFFF\n",
-      "FHFH\n",
-      "F\u001b[41mF\u001b[0mFH\n",
-      "HFFG\n",
-      "####################\n",
-      "  (Down)\n",
-      "SFFF\n",
-      "FHFH\n",
-      "\u001b[41mF\u001b[0mFFH\n",
-      "HFFG\n",
-      "####################\n",
-      "  (Right)\n",
-      "SFFF\n",
-      "FHFH\n",
+      "F\u001b[41mH\u001b[0mFH\n",
       "FFFH\n",
-      "\u001b[41mH\u001b[0mFFG\n"
+      "HFFG\n"
      ]
     }
    ],
@@ -268,6 +262,200 @@
    "metadata": {},
    "source": [
     "#### Q-learning and Q-network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gym\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[41mS\u001b[0mFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "\n",
+      "4\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "state = env.reset()\n",
+    "env.render()\n",
+    "print()\n",
+    "print(env.action_space.n) \n",
+    "print(env.observation_space.n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# reset graph. Usefull when one uses a Jupyter notebook and\n",
+    "# has already executed the cell that creates the TensorFlow graph.\n",
+    "tf.reset_default_graph() \n",
+    "n_states, n_actions = env.observation_space.n, env.action_space.n\n",
+    "\n",
+    "# input states\n",
+    "inputs = tf.placeholder(dtype=tf.float32, shape=[None, n_states])\n",
+    "\n",
+    "# parameter of our neural-network\n",
+    "W = tf.get_variable(dtype=tf.float32, shape=[n_states, n_actions],\n",
+    "                    initializer=tf.contrib.layers.xavier_initializer(),\n",
+    "                    name='W')\n",
+    "b = tf.get_variable(dtype=tf.float32, shape=[n_actions], \n",
+    "                    initializer=tf.zeros_initializer(),\n",
+    "                    name=\"b\")\n",
+    "\n",
+    "Q_pred = tf.matmul(inputs, W) + b\n",
+    "a_pred = tf.argmax(Q_pred, 1) # predicted action\n",
+    "\n",
+    "# Q_target will be computed according to equation (2)\n",
+    "Q_target = tf.placeholder(dtype=tf.float32, shape=[1, n_actions])\n",
+    "\n",
+    "# compute the loss according to equation (1)\n",
+    "loss = tf.reduce_sum(tf.square(Q_target - Q_pred))\n",
+    "\n",
+    "# define the update rule for our network\n",
+    "update = tf.train.GradientDescentOptimizer(learning_rate=0.1).minimize(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 50 100 150 200 250 300 350 400 450 500 550 600 650 700 750 800 850 900 950 1000 1050 1100 1150 1200 1250 1300 1350 1400 1450 1500 1550 1600 1650 1700 1750 1800 1850 1900 1950 \n",
+      "###################\n",
+      "  (Right)\n",
+      "SFFF\n",
+      "\u001b[41mF\u001b[0mHFH\n",
+      "FFFH\n",
+      "HFFG\n",
+      "###################\n",
+      "  (Right)\n",
+      "SFFF\n",
+      "F\u001b[41mH\u001b[0mFH\n",
+      "FFFH\n",
+      "HFFG\n"
+     ]
+    }
+   ],
+   "source": [
+    "init = tf.global_variables_initializer()\n",
+    "\n",
+    "# parameters\n",
+    "gamma = 0.95\n",
+    "epsilon = 0.1\n",
+    "episodes = 2000\n",
+    "\n",
+    "# initialize the TensorFlow session and train the model\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init) # initialize the variables of our model (a.k.a parameters W and b)\n",
+    "    for episode in range(episodes):\n",
+    "        if episode % 50 == 0:\n",
+    "            print(episode, end=\" \")\n",
+    "        state = env.reset() # reset environment and get initial state\n",
+    "        r_total = 0 # sum of reward in current episode\n",
+    "        while True:\n",
+    "            # create the onehot vector associate to the state 'state':\n",
+    "            input_state = np.identity(n_states)[state:state+1]\n",
+    "\n",
+    "            # recover the value of Q_pred and a_pred from the neural-network\n",
+    "            apred, Qpred = sess.run([a_pred, Q_pred], feed_dict={inputs: input_state})\n",
+    "\n",
+    "            # use epsilon-greedy strategy\n",
+    "            if np.random.uniform() < epsilon:\n",
+    "                # if we explore, overide the action returned by the neural-network\n",
+    "                # with a random action\n",
+    "                apred[0] = env.action_space.sample()\n",
+    "\n",
+    "            # get next state, reward and if the game ended or not\n",
+    "            next_state, reward, terminate, _ = env.step(apred[0])\n",
+    "\n",
+    "            # reuse the same code as in Q-learning to negate reward\n",
+    "            if r == 0:\n",
+    "                if t == True:\n",
+    "                    r = -10\n",
+    "                else:\n",
+    "                    r = -1\n",
+    "            \n",
+    "            if r == 1:\n",
+    "                r = 100\n",
+    "\n",
+    "            # obtain the Q(s', a') from equation (2) value by feeding the new state in our neural-network\n",
+    "            input_next_state = np.identity(n_states)[next_state:next_state+1]\n",
+    "            Qpred_next = sess.run(Q_pred, feed_dict={inputs: input_next_state})\n",
+    "\n",
+    "            # the the max of Qpred_next = Q(s', a') over a'\n",
+    "            Qmax = np.max(Qpred_next)\n",
+    "\n",
+    "            # update Q(s,a)_target from equation (2)\n",
+    "            Qtarget = Qpred\n",
+    "            Qtarget[0, apred[0]] = r + gamma * Qmax\n",
+    "\n",
+    "            # Train the neural-network using the Qtarget and Qpred and the update rule\n",
+    "            loss = sess.run(update, feed_dict={inputs: input_state, Q_target: Qtarget})\n",
+    "\n",
+    "            r_total += r\n",
+    "            \n",
+    "            # move to next_state before next iteration\n",
+    "            state = next_state\n",
+    "            if terminate: # end episode if agent falls in hole or goal state has been reached\n",
+    "                break\n",
+    "    \n",
+    "    \n",
+    "    print()\n",
+    "    s = env.reset()\n",
+    "    while True:\n",
+    "        input_state = np.identity(n_states)[s:s+1]\n",
+    "        a = sess.run(a_pred, feed_dict={inputs: input_state})\n",
+    "        next_s, r, terminate, _ = env.step(a[0])\n",
+    "        print(\"###################\")\n",
+    "        env.render()\n",
+    "        s = next_s\n",
+    "        if terminate:\n",
+    "            break"
    ]
   },
   {
